docs: 常见问题容器配置